# bitcoin-explorer

./: .gitignore  README.md
.github/workflows/: deploy.yml
FrontEnd/bitcoin-explorer-new/: package-lock.json  package.json
FrontEnd/bitcoin-explorer-new/components/: BitcoinExplorer.js
FrontEnd/bitcoin-explorer-new/pages/: index.tsx
ingestion/: Cargo.toml
ingestion/src/: main.rs  models.rs  schema.rs
rust-data-fetch/: .gitignore  Cargo.toml  Dockerfile
rust-data-fetch/src/: main.rs
webapp/: Dockerfile  package-lock.json  package.json
webapp/app/: layout.tsx  page.tsx  types.ts
webapp/app/api/blocks/: route.ts
webapp/app/api/blocks/block/: route.ts
webapp/components/ui/: chart.tsx
