[package]
name = "ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"  # Optional: If you use serde_json for JSON parsing