[package]
name = "ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoincore-rpc = "0.19.0" 
bigdecimal = { version = "0.4.5"}
serde_json = "1.0.128"  # Ensure you have serde_json for the Value type
dotenv = "0.15.0"
chrono =  { version = "0.4.38" }
uuid = "1.10.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-postgres = "0.7.12" # Replace with the latest version
postgres = "0.19"  # Add this line
serde = { version = "1.0", features = ["derive"] }