[package]
name = "rust-data-fetch"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.8", features = ["json"] }
tokio = { version = "1.40.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"